--- a/nifi-extension-bundles/nifi-azure-bundle/nifi-azure-reporting-task/pom.xml
+++ b/nifi-extension-bundles/nifi-azure-bundle/nifi-azure-reporting-task/pom.xml
@@ -27,9 +27,14 @@
             <artifactId>httpcore</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.1.4</version>
+            <groupId>org.eclipse.parsson</groupId>
+            <artifactId>parsson</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.nifi</groupId>
