--- a/nifi-manifest/nifi-extension-manifest-model/pom.xml
+++ b/nifi-manifest/nifi-extension-manifest-model/pom.xml
@@ -29,9 +29,9 @@
             <artifactId>swagger-annotations</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
