--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,6 @@
         <module>nifi-system-tests</module>
         <module>minifi</module>
         <module>nifi-stateless</module>
-        <module>nifi-registry</module>
         <module>nifi-toolkit</module>
         <module>nifi-manifest</module>
         <module>c2</module>
@@ -139,9 +138,9 @@
         <jackson.bom.version>2.19.2</jackson.bom.version>
         <avro.version>1.11.4</avro.version>
         <jaxb.runtime.version>4.0.5</jaxb.runtime.version>
-        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
         <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
-        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
+        <jakarta.ws.rs-api.version>4.0.0</jakarta.ws.rs-api.version>
         <json.smart.version>2.6.0</json.smart.version>
         <groovy.version>4.0.28</groovy.version>
         <surefire.version>3.5.1</surefire.version>
@@ -149,7 +148,7 @@
         <ozone.version>1.4.1</ozone.version>
         <gcs.version>2.1.5</gcs.version>
         <aspectj.version>1.9.24</aspectj.version>
-        <jersey.bom.version>3.1.11</jersey.bom.version>
+        <jersey.bom.version>4.0.0-M2</jersey.bom.version>
         <log4j2.version>2.25.1</log4j2.version>
         <logback.version>1.5.18</logback.version>
         <mockito.version>5.19.0</mockito.version>
@@ -186,8 +185,8 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.eclipse.jetty.ee10</groupId>
-                <artifactId>jetty-ee10-bom</artifactId>
+                <groupId>org.eclipse.jetty.ee11</groupId>
+                <artifactId>jetty-ee11-bom</artifactId>
                 <version>${jetty.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -552,14 +551,19 @@
                 <version>${jaxb.runtime.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>javax.activation</artifactId>
-                <version>1.2.0</version>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>2.1.3</version>
             </dependency>
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>1.3.2</version>
+                <groupId>org.eclipse.angus</groupId>
+                <artifactId>angus-activation</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jsoup</groupId>
