--- a/nifi-assembly/pom.xml
+++ b/nifi-assembly/pom.xml
@@ -473,6 +473,12 @@ language governing permissions and limitations under the License. -->
         </dependency>
         <dependency>
             <groupId>org.apache.nifi</groupId>
+            <artifactId>nifi-kafka-to-s3-nar</artifactId>
+            <version>2.7.0-SNAPSHOT</version>
+            <type>nar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.nifi</groupId>
             <artifactId>nifi-groovyx-nar</artifactId>
             <version>2.9.0-SNAPSHOT</version>
             <type>nar</type>
