--- a/nifi-extension-bundles/nifi-aws-bundle/nifi-aws-nar/pom.xml
+++ b/nifi-extension-bundles/nifi-aws-bundle/nifi-aws-nar/pom.xml
@@ -70,5 +70,10 @@
             <artifactId>nifi-aws-schema-registry-service</artifactId>
             <version>2.7.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk.crt</groupId>
+            <artifactId>aws-crt</artifactId>
+            <version>${awscrt.version}</version>
+        </dependency>
     </dependencies>
 </project>
