--- a/nifi-extension-bundles/nifi-aws-bundle/nifi-aws-service-api/pom.xml
+++ b/nifi-extension-bundles/nifi-aws-bundle/nifi-aws-service-api/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>s3</artifactId>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk.crt</groupId>
+            <artifactId>aws-crt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>software.amazon.encryption.s3</groupId>
             <artifactId>amazon-s3-encryption-client-java</artifactId>
         </dependency>
