NIFI-15312: Implementation of Parameter Provider based Secrets Manager; updated mock framework to support secrets; validation cleanup (#10638)

--- a/nifi-connector-mock-bundle/nifi-connector-mock/src/main/resources/nifi.properties
+++ b/nifi-connector-mock-bundle/nifi-connector-mock/src/main/resources/nifi.properties
@@ -94,6 +94,9 @@ nifi.nar.persistence.provider.properties.directory=target/nifi-storage/nar_repos
 # Asset Management
 nifi.asset.manager.properties.directory=target/nifi-storage/assets
 
+# Secrets Manager
+nifi.secrets.manager.implementation=org.apache.nifi.mock.connector.server.secrets.ConnectorTestRunnerSecretsManager
+
 # Site to Site properties
 nifi.remote.input.host=localhost
 nifi.remote.input.secure=true
