NIFI-15353: Adding support for rendering Connector Documentation. (#10683)
* NIFI-15353: Adding support for rendering Connector Documentation.

* NIFI-15353: Addressing review feedback.

* NIFI-15353: Using mergeMap instead of switchMap to allow for concurrent doc loading.

This closes #10683

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 
         <!-- NiFi build -->
         <nifi-api.version>2.7.0-SNAPSHOT</nifi-api.version>
-        <nifi.nar.maven.plugin.version>2.2.0</nifi.nar.maven.plugin.version>
+        <nifi.nar.maven.plugin.version>2.3.0-SNAPSHOT</nifi.nar.maven.plugin.version>
 
         <!-- CSPs SDK -->
         <software.amazon.awssdk.version>2.41.27</software.amazon.awssdk.version>
