--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -81,7 +81,9 @@ jobs:
         verify
         -P skip-unit-tests
         -P integration-tests
+        -P nifi-registry-integration-tests
         -P report-code-coverage
+        -D include-python-integration-tests=true
       MAVEN_BUILD_EXCLUDE_PROJECTS: >-
         -pl -:minifi-assembly
         -pl -:nifi-assembly
