--- a/nifi-connector-mock-bundle/nifi-connector-mock/src/main/resources/nifi.properties
+++ b/nifi-connector-mock-bundle/nifi-connector-mock/src/main/resources/nifi.properties
@@ -94,6 +94,9 @@ nifi.nar.persistence.provider.properties.directory=target/nifi-storage/nar_repos
 # Asset Management
 nifi.asset.manager.properties.directory=target/nifi-storage/assets
 
+# Connector Asset Manager
+nifi.connector.asset.manager.implementation=org.apache.nifi.mock.connector.server.MockConnectorAssetManager
+
 # Secrets Manager
 nifi.secrets.manager.implementation=org.apache.nifi.mock.connector.server.secrets.ConnectorTestRunnerSecretsManager
 
