--- a/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
+++ b/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
@@ -137,6 +137,8 @@ nifi.nar.persistence.provider.properties.directory=${nifi.nar.persistence.provid
 # Asset Management
 nifi.asset.manager.implementation=${nifi.asset.manager.implementation}
 nifi.asset.manager.properties.directory=${nifi.asset.manager.properties.directory}
+nifi.connector.asset.manager.implementation=${nifi.connector.asset.manager.implementation}
+nifi.connector.asset.manager.properties.directory=${nifi.connector.asset.manager.properties.directory}
 
 # Site to Site properties
 nifi.remote.input.host=
