--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ nb-configuration.xml
 .java-version
 /nifi-nar-bundles/nifi-py4j-bundle/nifi-python-extension-api/src/main/python/dist/
 __pycache__
-.cursor/
+.cursor/debug.log
 
 # Develocity
 .mvn/.develocity/
