NIFI-15355 Connector Configuration Repository (#10876)
* NIFI-15255 Introduce ConnectorConfigurationRepository Extension Interface
* Add new property key to default nifi.properties file
* Address peer review comments

--- a/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
+++ b/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
@@ -140,6 +140,9 @@ nifi.asset.manager.properties.directory=${nifi.asset.manager.properties.director
 nifi.connector.asset.manager.implementation=${nifi.connector.asset.manager.implementation}
 nifi.connector.asset.manager.properties.directory=${nifi.connector.asset.manager.properties.directory}
 
+# Connector Configuration Provider
+nifi.components.connectors.configuration.provider.implementation=
+
 # Site to Site properties
 nifi.remote.input.host=
 nifi.remote.input.secure=${nifi.remote.input.secure}
